; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_tsd.c_malloc_tsd_boot0.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_tsd.c_malloc_tsd_boot0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ncleanups = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @malloc_tsd_boot0() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  store i64 0, i64* @ncleanups, align 8
  %3 = call i64 (...) @tsd_boot0()
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32* null, i32** %1, align 8
  br label %11

6:                                                ; preds = %0
  %7 = call i32* (...) @tsd_fetch()
  store i32* %7, i32** %2, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i32* @tsd_arenas_tdata_bypassp_get(i32* %8)
  store i32 1, i32* %9, align 4
  %10 = load i32*, i32** %2, align 8
  store i32* %10, i32** %1, align 8
  br label %11

11:                                               ; preds = %6, %5
  %12 = load i32*, i32** %1, align 8
  ret i32* %12
}

declare dso_local i64 @tsd_boot0(...) #1

declare dso_local i32* @tsd_fetch(...) #1

declare dso_local i32* @tsd_arenas_tdata_bypassp_get(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
